FIxing alignment of execute button on the speedtest dashboard
Reference #2086

--- a/src/appserver/static/speedtest.css
+++ b/src/appserver/static/speedtest.css
@@ -3,7 +3,6 @@
  */
 #panel2 .fieldset{
 	float:left;
-	padding-right: 0px;
 }
 
 #panel2 .panel-element-row{
